# GoodCommunity-Back-Up

./: .replit  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  supabase_client.py
learn_and_earn/: blockchain.py  learn_and_earn.py  nft_service.py
static/static/: GoodMarket_LearnEarn_Notion.md
templates/: learn_and_earn.html  overview.html
