[project]
name = "goodmarket"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "email-validator",
    "eth-account",
    "flask",
    "flask-compress",
    "flask-sqlalchemy",
    "gunicorn",
    "httpx",
    "lxml",
    "markupsafe",
    "nest-asyncio",
    "phonenumbers",
    "pillow",
    "psycopg2-binary",
    "pycryptodome",
    "py-solc-x",
    "pyjwt",
    "python-dateutil",
    "pytz",
    "requests",
    "rich",
    "sqlalchemy",
    "supabase",
    "tenacity",
    "typing-extensions",
    "web3",
    "websockets",
]
