[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "eth-account>=0.13.7",
    "flask>=3.1.3",
    "flask-compress>=1.15",
    "gunicorn>=25.3.0",
    "markupsafe>=3.0.3",
    "pillow>=12.2.0",
    "py-solc-x>=2.0.5",
    "requests>=2.33.1",
    "supabase>=2.28.3",
    "web3>=7.15.0",
]
